2010-10-26  Kenichi Ishibashi  <bashi@google.com>

Reviewed by Kent Tamura.

        Input Method inserts conversion candidates unexpectedly
        https://bugs.webkit.org/show_bug.cgi?id=46868

        Adds a test.

        * platform/chromium/fast/text/chromium-mac-duplicate-ime-composition.html: Added.
2010-10-26  Kenichi Ishibashi  <bashi@google.com>

        Reviewed by Kent Tamura.

        Input Method inserts conversion candidates unexpectedly
        https://bugs.webkit.org/show_bug.cgi?id=46868

        Calls updateStyleIfNeeded() before setting selection for the composition to
        avoid inserting the previous composition text into a content editable element
        which has an event handler that changes the style of the element.

        Test: platform/chromium/fast/text/chromium-mac-duplicate-ime-composition.html

        * editing/Editor.cpp:
        (WebCore::Editor::setComposition): calls updateStyleIfNeeded() before setting selection.
2010-10-26  Kenichi Ishibashi  <bashi@google.com>

        Reviewed by Kent Tamura.

        Input Method inserts conversion candidates unexpectedly
        https://bugs.webkit.org/show_bug.cgi?id=46868

        Adds setComposition() to TextInputController to make DRT emulate
        an input method behavior.

        * DumpRenderTree/chromium/TextInputController.cpp:
        (TextInputController::TextInputController):
        (TextInputController::setComposition): Added.
        * DumpRenderTree/chromium/TextInputController.h:

Canonical link: https://commits.webkit.org/61087@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@70555 268f45cc-cd09-0410-ab3c-d52691b4dbfc