WebCore/editing/Editor.cpp
@@ -1534,6 +1534,11 @@ void Editor::setComposition(const String& text, const Vector<CompositionUnderlin
 
     setIgnoreCompositionSelectionChange(true);
 
+    // Updates styles before setting selection for composition to prevent
+    // inserting the previous composition text into text nodes oddly.
+    // See https://bugs.webkit.org/show_bug.cgi?id=46868
+    m_frame->document()->updateStyleIfNeeded();
+
     selectComposition();
 
     if (m_frame->selection()->isNone()) {
