WebKitTools/DumpRenderTree/chromium/TextInputController.cpp
@@ -33,9 +33,11 @@
 
 #include "TestShell.h"
 #include "WebBindings.h"
+#include "WebCompositionUnderline.h"
 #include "WebFrame.h"
 #include "WebRange.h"
 #include "WebString.h"
+#include "WebVector.h"
 #include "WebView.h"
 #include <wtf/StringExtras.h>
 #include <string>
@@ -66,6 +68,7 @@ TextInputController::TextInputController(TestShell* shell)
     bindMethod("substringFromRange", &TextInputController::substringFromRange);
     bindMethod("unmarkText", &TextInputController::unmarkText);
     bindMethod("validAttributesForMarkedText", &TextInputController::validAttributesForMarkedText);
+    bindMethod("setComposition", &TextInputController::setComposition);
 }
 
 WebFrame* TextInputController::getMainFrame()
@@ -231,4 +234,28 @@ void TextInputController::makeAttributedString(const CppArgumentList&, CppVarian
 {
     // FIXME: Implement this.
     result->setNull();
+}
+
+void TextInputController::setComposition(const CppArgumentList& arguments, CppVariant* result)
+{
+    result->setNull();
+
+    WebView* view = getMainFrame() ? getMainFrame()->view() : 0;
+    if (!view)
+        return;
+
+    if (arguments.size() < 1)
+        return;
+
+    // Sends a keydown event with key code = 0xE5 to emulate input method behavior.
+    WebKeyboardEvent keyDown;
+    keyDown.type = WebInputEvent::RawKeyDown;
+    keyDown.modifiers = 0;
+    keyDown.windowsKeyCode = 0xE5; // VKEY_PROCESSKEY
+    keyDown.setKeyIdentifierFromWindowsKeyCode();
+    view->handleInputEvent(keyDown);
+
+    WebVector<WebCompositionUnderline> underlines;
+    WebString text(WebString::fromUTF8(arguments[0].toString()));
+    view->setComposition(text, underlines, 0, text.length());
 }
